--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,10 @@
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+
+# Ignore other unneeded files
+doc/
+*.sqp
+*~
+.project
+bundler_stubs/
